SearchController: fix wrong URI construction
Current code uses a URI constructor that creates wrong URIs with
the default solr.selectUrl setting in conf/csx.config.properties.template.
It creates URL with duplicate "http:".

The new way to create URL is sugguested in
http://stackoverflow.com/questions/6198894/java-encode-url